--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,4 @@ services:
       - FLASK_APP=src/__init__.py
       - FLASK_DEBUG=1
       - FLASK_ENV=development
+      - APP_SETTINGS=src.config.DevelopmentConfig
